# GymConnectX

./: .gitignore  LICENSE.md  README.md  autotesting.py  demo.py  example_base64.py  play.py  pyproject.toml  run_env.py  setup.py  testing.py
.github/workflows/: python-publish.yml
aprqlearning/: agent_weights_episode_final.csv  env.py
dqn/: DQNTrainingTest.py  DQN_model.py  dqn.pth
dqn_6x7/: DQNTrainingTest.py  dqn.pth
gymconnectx/: __init__.py
gymconnectx/envs/: __init__.py  gymconnectxenv.py
qlearning/astatic/: qagent.py
qlearning/astatic_scenario/: q_table_old.csv  qagent.py
qlearning/full/: q_table.csv  qagent.py
qlearning/single/: q_table_living.csv  q_table_no_living.csv  qagent.py
qlearning/single_player/: q_table_old.csv  qagent.py
qlearning/static_scenario/: AgentQLearning.py  BuildScenarioX.py  ScenarioBase.py  math_to_calculate_prob.py
qlearning/static_scenario/connect3_3x3/: case_10_player_1_connect3_3x3.csv  case_10_player_2_connect3_3x3.csv  case_18_player_1_connect3_3x3.csv  case_19_player_2_connect3_3x3.csv  case_1_connect3_3x3.csv  case_1_player_1_connect3_3x3.csv  case_24_player_2_connect3_3x3.csv  case_28_player_2_connect3_3x3.csv  connect3_3x3.py  (+30 more)
qlearning/two_players/: q_table_player_1.csv  q_table_player_1_12000.csv  q_table_player_1_15000.csv  q_table_player_1_21000.csv  q_table_player_1_24000.csv  q_table_player_1_36000.csv  q_table_player_1_9000.csv  q_table_player_2_18000.csv  q_table_player_2_27000.csv  q_table_player_2_3000.csv  q_table_player_2_6000.csv  qagent.py
qlearning/update/: q_table.csv  qagent.py
(+369 files in other folders)
