[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gymconnectx"
version = "1.0.4"
description = "An OpenAI Gym Environment Connect X Game with GUI. ConnectX is a game for two players that is based on the well-known Connect 4. The goal is to place X coins in a row, column, or diagonal on a board with dimensions M by N."
readme = "README.md"
authors = [{ name = "Fauzi Sholichin" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["connect4", "gym", "pygame", "reinforcement learning"]
dependencies = ["gym", "pygame"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/fauzisho/GymConnectX"